# qdbookdownloadv3

./: .gitignore  compile.bat  compile.py  compile.sh  download_compiler.py  forepage.html  manage.html  manifest.json  options.html  package-lock.json  package.json  popup.html  sandbox.html
_locales/en/: messages.json
_locales/zh/: messages.json
css/: manage.css
js(origin)/: _zlib.d.ts  compress.js  const.js  eval.js  messages.js  popup.js  qdchapter.js  qdchapter_info.js  sandbox.js
js-extensions/zlib/: CMakeLists.txt  post.js  pre.js  zlib_wasm.c
js_origin/: _zlib.d.ts  backgroud.js  background.js  binary.js  clone.js  compress.js  const.js  eval.js  eventpool.js  forepage.js  i18n.js  manage.js  match_urls.js  memfile.js  messages.js  options.js  params.js  popup.js  qdbook.js  qdbook_info.js  qdchapter.js  qdchapter_info.js  sandbox.js  sandbox_proxy.js  save_file.js  settings.js  storage.js  tabs.js
js_origin/db/indexeddb/: qd.js
js_origin/epub/: xhtml.js
js_origin/hash/: basic.js  crc32.js  md5.js
js_origin/json/: const.js  parse.js  stringify.js
js_origin/manage/: main_list.js  params.js  qd_book.js  qd_book_list.js
js_origin/options/: bool.js
js_origin/zip/: compress.js  const.js  file.js  local.js  stat.js  time.js  utils.js
