cmake_minimum_required(VERSION 3.1)

project(zlib-wasm)

find_package(ZLIB REQUIRED)

option(WEB_ONLY "Build only for web" ON)
option(ALLOW_MEMORY_GROWTH "Allow memory growth" ON)
option(TOTAL_STACK "The total stack size." "512KB")
option(INITIAL_MEMORY "Initial memory size" "1MB")
option(MEMORY_GROWTH_LINEAR_STEP "Memory growth step" OFF)

include(GNUInstallDirs)

add_link_options("SHELL:-s WASM=1")
add_link_options("SHELL:-s EXPORTED_RUNTIME_METHODS='[\"cwrap\"]'")
add_link_options("SHELL:--post-js \"${CMAKE_CURRENT_SOURCE_DIR}/post.js\"")
add_link_options("SHELL:-s EXPORTED_FUNCTIONS='[\"_malloc\", \"_free\"]'")
add_link_options("SHELL:-s TOTAL_STACK=${TOTAL_STACK}")
add_link_options("SHELL:-s TOTAL_MEMORY=${INITIAL_MEMORY}")
if (ALLOW_MEMORY_GROWTH)
    add_link_options("SHELL:-s ALLOW_MEMORY_GROWTH=1")
endif()
if (MEMORY_GROWTH_LINEAR_STEP)
    add_link_options("SHELL:-s MEMORY_GROWTH_LINEAR_STEP=${MEMORY_GROWTH_LINEAR_STEP}")
endif()
if (WEB_ONLY)
    add_link_options("SHELL:--post-js \"${CMAKE_CURRENT_SOURCE_DIR}/post2.js\"")
    add_link_options("SHELL:--pre-js \"${CMAKE_CURRENT_SOURCE_DIR}/pre.js\"")
    add_link_options("SHELL:-s ENVIRONMENT=web")
endif()

add_executable(_zlib zlib_wasm.c)
target_link_libraries(_zlib ZLIB::ZLIB)
install(TARGETS _zlib)
install(FILES ${CMAKE_BINARY_DIR}/_zlib.wasm DESTINATION ${CMAKE_INSTALL_BINDIR})
